@@ -119,3 +119,11 @@ pqtlMR <- function(Ins,Ids,prefix="INF1")
   write.table(mr_pleio,file=result_files[4],sep="\t",col.names=TRUE,row.names=FALSE,quote=FALSE)
   write.table(mr_single,file=result_files[5],sep="\t",col.names=TRUE,row.names=FALSE,quote=FALSE)
 }
+
+uniprot2ids <- function(from="ACC+ID",to,query)
+{
+  rt <- find.package("pQTLtools")
+  f <- file.path(rt ,"python","uniprot2ids.py")
+  reticulate::source_python(f)
+  invisible(uniprot2ids(from,to,query))
+}
