@@ -1,0 +1,21 @@
+#!/usr/bin/python3
+
+import urllib.parse
+import urllib.request
+
+def uniprot2ids(uniprotid,to,query):
+  params = {
+  'from': uniprotid,
+  'to': to,
+  'format': 'tab',
+  'query': query
+  }
+  data = urllib.parse.urlencode(params)
+  data = data.encode('utf-8')
+  url = 'https://www.uniprot.org/uploadlists/'
+  req = urllib.request.Request(url, data)
+  with urllib.request.urlopen(req) as f:
+     response = f.read()
+  r = response.decode('utf-8')
+  return(r)
+# 'O00300 O14625 O14788 O15169 O15444 O43508 O43557 O95630 O95750 O95760 P00749 P00813 P01135 P01137 P01138 P01374 P01375 P01579 P01583 P02778 P03956 P05112 P05113 P05231 P06127 P09238 P09341 P09603 P10145 P10147 P13232 P13236 P13500 P13725 P14210 P14784 P15018 P15692 P20783 P21583 P22301 P23560 P25942 P28325 P29460 P35225 P39905 P42702 P42830 P49771 P50225 P50591 P51671 P55773 P60568 P78423 P78556 P80075 P80098 P80162 P80511 Q07011 Q07325 Q08334 Q13007 Q13261 Q13291 Q13478 Q13541 Q13651 Q14116 Q14790 Q16552 Q5T4W7 Q8IXJ6 Q8N6P7 Q8NF90 Q8NFT8 Q8WWJ7 Q969D9 Q99616 Q99731 Q99748 Q9BZW8 Q9GZV9 Q9H5V8 Q9NRJ3 Q9NSA1 Q9NYY1 Q9NZQ7 Q9P0M4 Q9UHF4'
