@@ -1,5 +1,7 @@
 ## Version 0.1
 
+* uniprot2ids based on UniProt
+* pqtlMR based on TwoSampleMR
 * Tidy up various options of SomaLogic lookup (panel, box, ST4)
 * Suggest circlize, openxlsx, knitr and add HTML vignette (biomaRt, karyoploteR, regioneR)
   with cis/trans-classification/ideogram/mhtplot2d examples
